src/objects/GLBL_Shared_Components__c.object
<CustomObject>
    <description>Business Description: This object is used to be able to capture and track all the shared components that are available for all projects to use within the GSO

Created on 08/20/2014 by HBabaria
MICO</description>
    <fields>
        <fullName>Associated_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MICO: The app to which this Shared Component belongs</description>
        <label>Associated App</label>
        <referenceTo>MICO_App__c</referenceTo>
        <relationshipLabel>Shared Components</relationshipLabel>
        <relationshipName>Shared_Components1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component_Created_Date__c</fullName>
        <description>MICO: The date/time on which the Component was created in the GSO</description>
        <label>Component Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Component_Last_Modified_Date__c</fullName>
        <description>MICO: The date/time on which the Component was last modified in the GSO</description>
        <label>Component Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <description>MICO: This field will store the name of the re-usable / shared resource</description>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MICO: Checkbox to determine the permissions that are available on this Shared Component</description>
        <label>Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MICO: Checkbox to determine the permissions that are available on this Shared Component</description>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>MICO: Detailed Description of the shared component</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MICO: Checkbox to determine the permissions that are available on this Shared Component</description>
        <label>Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metadata_Type__c</fullName>
        <label>Metadata Type</label>
        <picklist>
            <picklistValues>
                <fullName>AccountSettings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ActionOverride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ActivitiesSettings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AddressSettings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnalyticSnapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexClass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexComponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexTrigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppMenu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApprovalProcess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ArticleType</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssignmentRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AuthProvider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoResponseRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BaseSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BusinessHoursSettings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BusinessProcess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CallCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseSettings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChatterAnswersSettings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community (Zone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CompactLayout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CompanySettings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConnectedApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContractSettings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CriteriaBasedSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomApplicationComponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomField</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MICO: Select a Project record within MICO to associate this shared component to</description>
        <label>Project</label>
        <referenceTo>MICO_Project__c</referenceTo>
        <relationshipLabel>Shared Components</relationshipLabel>
        <relationshipName>Shared_Components1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Read__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MICO: Checkbox to determine the permissions that are available on this Shared Component</description>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Triggers__c</fullName>
        <description>MICO: This field will hold the names of all the triggers(if applicable) associated to the component</description>
        <label>Triggers</label>
        <type>TextArea</type>
    </fields>
    <label>Shared Components</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CID-{00000}</displayFormat>
        <label>Component ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shared Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>